<resources>
    <string name="app_name">Тестовые задания</string>
    <string name="nParameterLabel">Задайте значение n</string>
    <string name="firstTaskContent"><![CDATA[Задача №1 Необходимо вычислить значение 2​ в степени n. где 0 < n < 10000]]></string>
    <string name="secondTaskContent">Задача №2 Заданы две клетки шахматной доски. Требуется определить, возможно ли попасть из одной клетки в другую одним ходом шахматного коня, а если нет, то следует выяснить, возможно ли попасть с помощью двух ходов</string>
    <string name="secondTaskHint">Выберите начальную и конечную позицию для коня</string>
    <string name="thirdTaskContent">Задача №3 Дана шахматная доска, состоящая из NxN клеток, несколько из них вырезано. Провести ходом коня через невырезанные клетки путь минимальной длины из одной заданной клетки в другую</string>
    <string name="btnCalcCaption">Вычислить</string>
    <string name="tvTwoText">2</string>
    <string name="tvEqualText">=</string>
    <string name="btnNextCaption"><![CDATA[ПЕРЕЙТИ>]]></string>
    <string name="forthTaskContent">Задача №4 В таблице из N строк и N столбцов некоторые клетки заняты шариками, другие свободны. Выбран шарик, который нужно переместить, и место, куда его нужно переместить. Выбранный шарик за один шаг перемещается в соседнюю по горизонтали или вертикали свободную клетку. Требуется выяснить, возможно ли переместить шарик из начальной клетки в заданную, и, если возможно, то найти путь из наименьшего количества шагов</string>
    <string name="forthTaskHint">Расставьте шарики, выберите начальный шар и конечную точку</string>
</resources>
