<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FirstTaskActivity">


    <TextView
        android:id="@+id/firstTaskLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="11dp"
        android:text="@string/firstTaskContent"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/firstTaskHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstTaskLabel"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="11dp"
        android:text="@string/nParameterLabel"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="97dp" />

    <EditText
        android:id="@+id/powerValue"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_below="@+id/firstTaskHint"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="3"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="128dp"/>

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="123dp"
        android:layout_height="51dp"
        android:layout_below="@+id/firstTaskHint"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_toEndOf="@+id/powerValue"
        android:layout_toRightOf="@+id/powerValue"
        android:onClick="onCalculate"
        android:text="@string/btnCalcCaption" />

    <TextView
        android:id="@+id/tvTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="209dp"
        android:text="@string/tvTwoText"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvTwo"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/tvTwo"
        android:layout_toRightOf="@+id/tvTwo"
        android:text="0" />

    <TextView
        android:id="@+id/tvEqual"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_alignBottom="@+id/tvTwo"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/tvPower"
        android:layout_toRightOf="@+id/tvPower"
        android:text="@string/tvEqualText"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="209dp"
        android:layout_toEndOf="@+id/tvEqual"
        android:layout_toRightOf="@+id/tvEqual"
        android:text="1"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="11dp"
        android:onClick="jumpToSecond"
        android:text="@string/btnNextCaption" />

</RelativeLayout>