<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SecondTaskActivity">

    <TextView
        android:id="@+id/firstTaskLabel"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="11dp"
        android:text="@string/secondTaskContent"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/firstTaskHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstTaskLabel"
        android:layout_alignStart="@+id/firstTaskLabel"
        android:layout_alignLeft="@+id/firstTaskLabel"
        android:layout_alignEnd="@+id/firstTaskLabel"
        android:layout_alignRight="@+id/firstTaskLabel"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:text="@string/secondTaskHint"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="97dp" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="361dp"
        android:layout_height="224dp"
        android:layout_below="@+id/firstTaskHint"
        android:layout_alignStart="@+id/firstTaskHint"
        android:layout_alignLeft="@+id/firstTaskHint"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="11dp">

        <com.aparutest.aparuinterview.chess.Board
            android:id="@+id/chessBoard"
            android:layout_width="233dp"
            android:layout_height="match_parent" />
    </FrameLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstTaskHint"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="73dp"
        android:onClick="refresh"
        android:text="Очистить" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="11dp"
        android:onClick="jumpToThird"
        android:text="@string/btnNextCaption" />

    <TextView
        android:id="@+id/tvSecondTaskAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="11dp" />

</RelativeLayout>