<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ThirdTaskActivity">

    <TextView
        android:id="@+id/thirdTaskLabel"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="11dp"
        android:text="@string/thirdTaskContent"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="11dp" />

    <TextView
        android:id="@+id/thirdTaskHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thirdTaskLabel"
        android:layout_alignStart="@+id/thirdTaskLabel"
        android:layout_alignLeft="@+id/thirdTaskLabel"
        android:layout_alignEnd="@+id/thirdTaskLabel"
        android:layout_alignRight="@+id/thirdTaskLabel"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:text="@string/secondTaskHint"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="97dp" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="218dp"
        android:layout_height="214dp"
        android:layout_below="@+id/thirdTaskHint"
        android:layout_alignStart="@+id/thirdTaskHint"
        android:layout_alignLeft="@+id/thirdTaskHint"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="6dp">

        <com.aparutest.aparuinterview.chess.ChessBoard
            android:id="@+id/chessBoard"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_below="@+id/thirdTaskHint"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="210dp"
        android:onClick="refreshThird"
        android:text="Очистить" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thirdTaskHint"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="154dp"
        android:onClick="resolveRoute"
        android:text="Поиск" />

    <RadioGroup
        android:id="@+id/rgOperations"
        android:layout_width="135dp"
        android:layout_height="111dp"
        android:layout_below="@+id/thirdTaskHint"
        android:layout_alignBottom="@+id/frameLayout"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="104dp"
        android:layout_toEndOf="@+id/frameLayout"
        android:layout_toRightOf="@+id/frameLayout">

        <RadioButton
            android:id="@+id/rbStartPos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="начальная позиция" />

        <RadioButton
            android:id="@+id/rbEndPos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="конечная позиция" />

        <RadioButton
            android:id="@+id/rbCut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="вырезанные клетки" />
    </RadioGroup>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="11dp"
        android:onClick="jumpToFourth"
        android:text="@string/btnNextCaption" />

    <TextView
        android:id="@+id/tvRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="11dp"/>

</RelativeLayout>