<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FourthTaskActivity">

    <TextView
        android:id="@+id/forthTaskLabel"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="11dp"
        android:text="@string/forthTaskContent"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/forthTaskHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forthTaskLabel"
        android:layout_alignStart="@+id/forthTaskLabel"
        android:layout_alignLeft="@+id/forthTaskLabel"
        android:layout_alignEnd="@+id/forthTaskLabel"
        android:layout_alignRight="@+id/forthTaskLabel"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginRight="-1dp"
        android:text="@string/forthTaskHint"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="97dp" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="221dp"
        android:layout_height="226dp"
        android:layout_alignStart="@+id/forthTaskHint"
        android:layout_alignLeft="@+id/forthTaskHint"
        android:layout_alignTop="@+id/forthTaskHint"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="42dp">

        <com.aparutest.aparuinterview.chess.ChessBoard
            android:id="@+id/forthTaskChessBoard"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <Button
        android:id="@+id/btnRefreshForth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rgOperations"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:onClick="refreshForth"
        android:text="Очистить" />


    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRefreshForth"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:onClick="resolveRoute"
        android:text="Поиск" />

    <RadioGroup
        android:id="@+id/rgOperations"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/forthTaskHint"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="11dp"
        android:layout_toEndOf="@+id/frameLayout"
        android:layout_toRightOf="@+id/frameLayout"
        android:layout_marginRight="11dp">

        <RadioButton
            android:id="@+id/rbCut"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="расставить шарики" />

        <RadioButton
            android:id="@+id/rbStartPos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:text="выбрать шар" />

        <RadioButton
            android:id="@+id/rbEndPos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:text="конечная точка " />

    </RadioGroup>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="11dp"
        android:text="@string/btnNextCaption" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="11dp"
        android:max="8"
        android:progress="6" />

    <TextView
        android:id="@+id/tvRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="11dp" />

</RelativeLayout>